--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <header>
-    <img id="profile" src="images/scripted_logo_orange.png">
-    <h1>ScriptEd's Portfolio</h1>
+    <img id="profile" src="https://s-media-cache-ak0.pinimg.com/236x/6f/69/4b/6f694b5b6f697bc96c186be96600bf6c.jpg">
+    <h1>Ariadna's Portfolio</h1>
     <ul>
       <li><a class="nav" href="">Home</a></li>
       <li><a class="nav" href="">About</a></li>
